# Pygres

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/pygres/: types.py
src/pygres/db/: database.py
src/pygres/examples/: eg.py  models.py
src/pygres/models/: base_model.py  metaclass.py
src/pygres/schema/: ddl.py  introspection.py  type_mapping.py
src/pygres/tables/: table.py
src/pygres/tests/: test_bases.py  test_integration_analysis_table.py  test_unit_analysis_table.py
src/pygres/tests/base/: fakedb.py
src/pygres/tests/config/: internal_config.py  sample.env
